# HangDetector

./: CMakeLists.txt  README.md  changelog.md  mod.json
src/: main.cpp
watchdog/: CMakeLists.txt
watchdog/include/: shared.hpp
watchdog/src/: Util.hpp  Winapi.hpp  main.cpp
